# AISpec-Driven-Online_Hackathon-ll

./: .gitignore  README.md  docker-compose.yaml
.specify/memory/: constitution.md
backend/: Dockerfile  main.py  pyproject.toml  requirements.txt  todos.py  vercel.json
backend/ai_workflow/: assistant.py  guardrails.py  tools.py
backend/api/: index.py
backend/auth/: auth.py  password_hashing.py  send_otp.py
backend/db/: create_table.py
backend/models/: __init__.py  todo.py
backend/schema/: __init__.py  api_type.py  context_type.py  todo_type.py
backend/tests/: test_agent.py  test_auth.py  test_todos.py
cli_todo_app/: README.md  main.py  models.py  pyproject.toml  todo_manager.py  utils.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  not-found.tsx  page.tsx
frontend/src/components/: FeaturesSection.tsx  Footer.tsx  HeroSection.tsx  HowItWorks.tsx  (+2 more)
specs/001-nextjs-api-client/: data-model.md  plan.md  quickstart.md  research.md
specs/001-todo-cli-app/: data-model.md  plan.md  quickstart.md  research.md
specs/01-overview/: plan.md  spec.md  tasks.md
specs/02-authentication/: plan.md  spec.md  tasks.md
specs/03-api/: plan.md  spec.md  tasks.md
specs/04-backend/: plan.md  spec.md  tasks.md
specs/05-frontend/: plan.md  research.md  spec.md  tasks.md
specs/06-database/: plan.md  research.md  spec.md  tasks.md
specs/07-security/: plan.md  research.md  spec.md  tasks.md
specs/08-ai-chat/: plan.md  spec.md  tasks.md
specs/09-dockerization/: plan.md  spec.md  tasks.md
(+71 files in other folders)
